@@ -2,27 +2,45 @@ package io.github.raphaelmuniz.uniflow.dto.res.grupo;
 
 import io.github.raphaelmuniz.uniflow.entities.atividade.AtividadeAvaliativa;
 import io.github.raphaelmuniz.uniflow.entities.grupo.Grupo;
-import lombok.AllArgsConstructor;
-import lombok.Data;
+import io.github.raphaelmuniz.uniflow.entities.grupo.InscricaoGrupo;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Data
-@AllArgsConstructor
-public class GrupoResponseDTO {
-    private String id;
-    private String descricao;
-    private String titulo;
-    private List<String> atividadesId;
-    private List<String> estudantesMembrosId;
-    private String criadorId;
+public record GrupoResponseDTO(
+        String id,
+        String titulo,
+        String descricao,
+        String criadorId,
+        List<String> idsAtividades,
+        List<String> idsMembros
+) {
 
-    public GrupoResponseDTO(Grupo grupo) {
-        this.id = grupo.getId();
-        this.descricao = grupo.getDescricao();
-        this.titulo = grupo.getTitulo();
-        this.atividadesId = grupo.getAtividadesPublicadas().stream().map(AtividadeAvaliativa::getId).toList();
-        this.estudantesMembrosId = grupo.getInscricoes().stream().map(ig -> ig.getMembro().getId()).toList();
-        this.criadorId = grupo.getAssinanteCriadorGrupo().getId();
+    public static GrupoResponseDTO fromEntity(Grupo grupo) {
+        if (grupo == null) {
+            return null;
+        }
+
+        List<String> idsAtividades = grupo.getAtividadesPublicadas() != null
+                ? grupo.getAtividadesPublicadas().stream()
+                .map(AtividadeAvaliativa::getId)
+                .collect(Collectors.toList())
+                : Collections.emptyList();
+
+        List<String> idsMembros = grupo.getInscricoes() != null
+                ? grupo.getInscricoes().stream()
+                .map(inscricao -> inscricao.getMembro().getId())
+                .collect(Collectors.toList())
+                : Collections.emptyList();
+
+        return new GrupoResponseDTO(
+                grupo.getId(),
+                grupo.getTitulo(),
+                grupo.getDescricao(),
+                grupo.getAssinanteCriadorGrupo().getId(),
+                idsAtividades,
+                idsMembros
+        );
     }
 }
